--- a/assets/styles/dbp_style.css
+++ b/assets/styles/dbp_style.css
@@ -122,7 +122,7 @@ p > a:focus {
 .navbar .navbar-nav li a {
 	text-transform: uppercase;
 	font-size: 1em;
-	font-weight: 600;
+	/* font-weight: 600; */
 	margin-top: 10px;
 	border-bottom-color: #7C7C7C;
 	border-bottom-width: 1px;
@@ -1118,7 +1118,7 @@ padding-top: 0px;
 	font-size: 1em;
 	letter-spacing: 2.5px;
 	color: #777;
-	font-weight: 600;
+	font-weight: 400;
 }
 
 
