--- a/assets/styles/dbp_style.css
+++ b/assets/styles/dbp_style.css
@@ -122,11 +122,7 @@ p > a:focus {
 .navbar .navbar-nav li a {
 	text-transform: uppercase;
 	font-size: 1em;
-<<<<<<< HEAD
 	/* font-weight: 600; */
-=======
-	font-weight: 600;
->>>>>>> acd00250f98135679d4a1fc5125696176e692a52
 	margin-top: 10px;
 	border-bottom-color: #7C7C7C;
 	border-bottom-width: 1px;
@@ -1122,11 +1118,7 @@ padding-top: 0px;
 	font-size: 1em;
 	letter-spacing: 2.5px;
 	color: #777;
-<<<<<<< HEAD
 	font-weight: 400;
-=======
-	font-weight: 600;
->>>>>>> acd00250f98135679d4a1fc5125696176e692a52
 }
 
 
@@ -1310,7 +1302,7 @@ background-color: black}
 
 .subheading_jwd {
 }
-/*  --   cube portfolio x (schliessen) slideshow--------------- */
+/*  --   cube portfolio x (close) slideshow */
 .cbp-popup-singlePageInline .cbp-popup-close {
 	background: transparent url("../projects/img/cbp-sprite.png") no-repeat scroll -92px 0px;
 	height: 40px;
@@ -1325,7 +1317,7 @@ background-color: black}
 }	
 	}
 
-/*  --   cube portfolio social icons--------------- */
+/*  --   cube portfolio social icons */
 
 .cbp-social-fb path {
 	fill: black;
@@ -1355,7 +1347,7 @@ background-color: black}
 	fill: white;
 }
 
-/*portfolio definity */
+/*portfolio  */
 .sl-next {
 	right: 0px;
 }
@@ -1512,7 +1504,7 @@ border-color: gray;
 	padding-top: 100px;
 	padding-bottom: 1px;
 	}
-/* ---- KundenLogos ---- */
+/* ---- Client Logos ---- */
 .testimonials-parallax .t-clients, .testimonials-dark .t-clients {
   display: block;
   list-style: none;
@@ -1714,7 +1706,7 @@ font-size: 1em;
 	
 }
 
-/*----Kontakt Info---*/
+/*----Contact Info---*/
 .antispam { 
     display:none;
 }
