--- a/assets/styles/scss/_settings.scss
+++ b/assets/styles/scss/_settings.scss
@@ -12,6 +12,7 @@ $light: #ececec;
 $lighter: #f8f8f8;
 $light-bg: #f4f4f4;
 $white: #fff;
+$orange: #FD8907;
 $error-red: #e80000;
 $success-green: #0F9D58;
 $highlight-text-bg: #17DA5B;
@@ -42,9 +43,9 @@ $letter-spacing: .2px;
 $heading-base-size: 1.7em;
 
 // Text Color
-$body-text-color: #777;
-$heading-text-color: #111;
-$link-color: rgba(44,170,223, 1);
+$body-text-color: #B3B3B3;
+$heading-text-color: rgb(255, 255, 255);
+$link-color: rgb(255, 253, 253);
 
 
 
