--- a/assets/styles/scss/_team.scss
+++ b/assets/styles/scss/_team.scss
@@ -80,7 +80,7 @@
 				font-family: $alt-heading-font;
 				font-size: 13px;
 				letter-spacing: 3.5px;
-				color: $gray-light;
+				color: $light;
 			}
 
 			.social-links {
