--- a/static/style_react.css
+++ b/static/style_react.css
@@ -44,7 +44,6 @@
     height: 150px;
 }
 element.style {
-
 }
 
 .show_module_description {
@@ -87,7 +86,9 @@ h6.subheading {
     font-size: 16px;
     font-weight: 300;
 }
-
+.p-content {
+    text-align: left;
+}
 a.open-btn {
     background-color: rgba(92, 92, 92, 0.7) !important;
     font-size: 15px;
@@ -109,35 +110,27 @@ a.open-btn {
     margin: 5px 5px 10px;
     background-color: transparent;
     color: rgb(136, 136, 136);
-    border-radius: 0;
+    border: none;
 }
 
-.btn:active,
-.btn-default:active,
-.filter-button:active,
-.btn:hover,
-.btn-default:hover,
-.filter-button:hover {
+.filter-button:hover.btn:hover {
     color: white;
-    border-radius: 0;
+    border: none;
     border-color: transparent;
     background-color: transparent;
 }
 
+.filter-button:active.btn:active {
+    color: white;
+    border: none !important;
 
-.btn:focus,
-.btn-default:focus,
-.filter-button:focus {
+    background-color: transparent;
+}
+
+.filter-button:focus.btn:focus {
     background: black;
-    border-radius: 0;
-    border-color: transparent;
+    border: none;
 }
-.btn,
-.btn-default .btn-default:hover {
-    border-radius: 0;
-    border-color: transparent;
-}
-
 
 @media only screen and (max-width: 800px) {
     .filter-button {
@@ -423,3 +416,29 @@ a.open-btn {
     border-radius: 5px;
     margin-top: -6px;
 }
+
+/* Down Arrow */
+
+
+.arrow {
+    text-align: center;
+    margin: 1% 0;
+    color: grey;
+  }
+  .bounce {
+    -moz-animation: bounce 2s infinite;
+    -webkit-animation: bounce 2s infinite;
+    animation: bounce 2s infinite;
+  }
+  
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0);
+    }
+    40% {
+      transform: translateY(-30px);
+    }
+    60% {
+      transform: translateY(-15px);
+    }
+  }
